--- a/index.html
+++ b/index.html
@@ -51,6 +51,26 @@
     </header>
 
     <main>
+        <!-- Sección de Participantes -->
+        <section class="participants-section">
+            <div class="container">
+                <div class="participants-header">
+                    <h2>Participantes del Grupo</h2>
+                    <div class="participants-list">
+                        <div class="participant-card">
+                            <span class="participant-name">Fabrizio Yerald Alfonso Sanchez Saravia</span>
+                        </div>
+                        <div class="participant-card">
+                            <span class="participant-name">Alex Coila Jarita</span>
+                        </div>
+                        <div class="participant-card">
+                            <span class="participant-name">Miguel Alexandre Huayhua Chambi</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="capitulo1" class="chapter">
             <div class="container">
                 <h2 class="chapter-title">Capítulo 1: "DADME UNA PALANCA Y MOVERÉ EL MUNDO"</h2>
